--- a/javaproject.html
+++ b/javaproject.html
@@ -41,7 +41,7 @@
     <div>
         <button>00</button>
         <button>0</button>
-        <button>.</button>
+        <button>.0</button>
         <button class="equalbtn">=</button>
     </div>
    </div>
