--- a/javaproject.html
+++ b/javaproject.html
@@ -41,14 +41,14 @@
     <div>
         <button>00</button>
         <button>0</button>
-        <button>.0</button>
+        <button>.</button>
         <button class="equalbtn">=</button>
     </div>
    </div>
 
 
   
-   <script src="javaproject.js" type="text/javascript"></script>
+   <script src="calculator/javaproject.js" type="text/javascript"></script>
 
   <!-- <script src="jquery-3.5.1.min.js"></script>  -->
 </body>
