--- a/javaproject.html
+++ b/javaproject.html
@@ -6,6 +6,7 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="javaproject.css">
     <script src="calculator/javaproject.js" type="scripttype"></script>
+    <!-- <script src="calculator/javaproject.js" type="text/javascript"></script> -->
 <!-- <link rel="stylesheet" href="javaproject.js"> -->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
     
@@ -42,14 +43,14 @@
         <button>00</button>
         <button>0</button>
         <button>.</button>
-     
         <button class="equalbtn">=</button>
     </div>
    </div>
 
+   <script src="javaproject.js" type="text/javascript"></script>
 
-  
-   <script src="calculator/javaproject.js" type="text/javascript"></script>
+<!--   
+   <script src="calculator/javaproject.js" type="text/javascript"></script> -->
 
   <!-- <script src="jquery-3.5.1.min.js"></script>  -->
 </body>
